--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,7 @@
 
 * {
     box-sizing: border-box;
-    font-family: 'Oswald', 'Open Sans', sans-serif;
+    font-family:  'Open Sans', 'Oswald', sans-serif;
 }
 
 html, body {
